<resources>
    <string name="app_name">whereismybike</string>

    //Main Fragment
    <string name="main_fragment">Main Fragment</string>
    <string name="settings_button">Settings</string>
    <string name="where_is_my_bike">Where is my bike</string>
    <string name="mark_it_button">Mark it</string>
    <string name="show_it_button">Show it</string>

    //Save Picture Fragment
    <string name="save_picture_fragment">Save Picture Fragment</string>
    <string name="save_button">Save</string>
    <string name="retake_it_button">Retake it</string>

    //Settings Fragment
    <string name="settings_fragment">Settings Fragment</string>
    <string name="settings">Settings</string>

    //Take Picture Fragment
    <string name="take_picture_fragment">Take Picture Fragment</string>
    <string name="flash">Flash</string>

    //Mark Location Fragment
    <string name="mark_location_fragment">Mark Location Fragment</string>

    //Retrieve Location Fragment
    <string name="retrieve_location_fragment">Retrieve Location Fragment</string>
    <string name="get_directions_button">Get directions</string>
    <string name="found_it_button">Found it</string>

    //Saved Location Fragment
    <string name="saved_location_fragment">Saved Location Fragment</string>
    <string name="information">Information</string>
    <string name="picture">Picture</string>
    <string name="note">Note</string>
    <string name="take_picture_button">Take a picture</string>
    <string name="add_note_button">Add a note</string>
    <string name="save_location_button">Save it</string>
    <string name="title_activity_maps">Map</string>

    //Sign in Fragment
    <string name="sign_in_options">Sign in using one the options below:</string>


</resources>
