<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRetrieveLocation">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/retrieveLocationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/retrieve_location_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/foundItButton"
        android:layout_width="430dp"
        android:layout_height="95dp"
        android:text="@string/found_it_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/getDirectionsButton"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="130dp"
        android:text="@string/get_directions_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>